Add more util files

--- a/analysis/training/Training_analysis.ipynb
+++ b/analysis/training/Training_analysis.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -139,29 +139,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/work/analysis/training/logs/experiment-3\n",
+      "<deepracer.logs.log.DeepRacerLog object at 0x7fc7c3562160>\n"
+     ]
+    },
+    {
      "ename": "Exception",
-     "evalue": "No files found in logs/sample-console-logs or logs/sample-console-logs/model/model_metadata.json",
+     "evalue": "No files found in /home/jovyan/work/analysis/training/logs/experiment-3 or None",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m log \u001b[38;5;241m=\u001b[39m DeepRacerLog(model_logs_root)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# load logs into a dataframe\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[43mlog\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m     pprint(log\u001b[38;5;241m.\u001b[39magent_and_network())\n",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(log)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# load logs into a dataframe\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mlog\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     pprint(log\u001b[38;5;241m.\u001b[39magent_and_network())\n",
       "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/log.py:156\u001b[0m, in \u001b[0;36mDeepRacerLog.load\u001b[0;34m(self, force)\u001b[0m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mself\u001b[39m, force\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    151\u001b[0m     \u001b[38;5;124;03m\"\"\" Method that loads DeepRacer training trace logs into a dataframe.\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \n\u001b[1;32m    153\u001b[0m \u001b[38;5;124;03m    This method is deprecated, use load_training_trace.\u001b[39;00m\n\u001b[1;32m    154\u001b[0m \n\u001b[1;32m    155\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 156\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_training_trace\u001b[49m\u001b[43m(\u001b[49m\u001b[43mforce\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/log.py:171\u001b[0m, in \u001b[0;36mDeepRacerLog.load_training_trace\u001b[0;34m(self, force, ignore_metadata)\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_block_duplicate_load(force)\n\u001b[1;32m    170\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ignore_metadata:\n\u001b[0;32m--> 171\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parse_trace_metadata\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfh\u001b[38;5;241m.\u001b[39mtraining_simtrace_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    174\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m    175\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPath to training-simtrace not configured. Check FileHandler configuration.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/log.py:370\u001b[0m, in \u001b[0;36mDeepRacerLog._parse_trace_metadata\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    368\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_parse_trace_metadata\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 370\u001b[0m     _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlist_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcheck_exist\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    371\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mfilterexp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_metadata_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    373\u001b[0m     _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfh\u001b[38;5;241m.\u001b[39mlist_files(check_exist\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    374\u001b[0m                            filterexp\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfh\u001b[38;5;241m.\u001b[39mhyperparameters_path)\n\u001b[1;32m    376\u001b[0m     model_metadata: \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/handler.py:86\u001b[0m, in \u001b[0;36mFSFileHandler.list_files\u001b[0;34m(self, filterexp, check_exist)\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     85\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m check_exist:\n\u001b[0;32m---> 86\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo files found in \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m or \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_folder, filterexp))\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     88\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m []\n",
-      "\u001b[0;31mException\u001b[0m: No files found in logs/sample-console-logs or logs/sample-console-logs/model/model_metadata.json"
+      "\u001b[0;31mException\u001b[0m: No files found in /home/jovyan/work/analysis/training/logs/experiment-3 or None"
      ]
     }
    ],
    "source": [
-    "model_logs_root = 'logs/sample-console-logs'\n",
-    "log = DeepRacerLog(model_logs_root)\n",
-    "\n",
+    "import os \n",
+    "dir_path = os.path.dirname(os.path.realpath(os.path.abspath('')))\n",
+    "model_logs_root = dir_path + '/training/logs/experiment-3'\n",
+    "print(model_logs_root)\n",
+    "log = DeepRacerLog(model_folder = model_logs_root)\n",
+    "print(log)\n",
+    " \n",
     "# load logs into a dataframe\n",
     "log.load()\n",
     "\n",
