--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -795,7 +795,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -809,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.13"
   },
   "toc-autonumbering": false
  },
