A few changes to dependancies

--- a/Training_analysis.ipynb
+++ b/Training_analysis.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -124,46 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'network': 'DEEP_CONVOLUTIONAL_NETWORK_SHALLOW',\n",
-      " 'sensor_list': ['FRONT_FACING_CAMERA'],\n",
-      " 'simapp_version': '4.0',\n",
-      " 'world': 'reinvent_base'}\n",
-      "-------------\n",
-      "{'batch_size': 64,\n",
-      " 'beta_entropy': 0.01,\n",
-      " 'discount_factor': 0.95,\n",
-      " 'e_greedy_value': 1.0,\n",
-      " 'epsilon_steps': 10000,\n",
-      " 'exploration_type': 'categorical',\n",
-      " 'loss_type': 'huber',\n",
-      " 'lr': 0.0003,\n",
-      " 'num_episodes_between_training': 20,\n",
-      " 'num_epochs': 3,\n",
-      " 'stack_size': 1,\n",
-      " 'term_cond_avg_score': 100000.0,\n",
-      " 'term_cond_max_episodes': 100000}\n",
-      "-------------\n",
-      "[{'index': 0, 'speed': 1.0, 'steering_angle': -30.0},\n",
-      " {'index': 1, 'speed': 2.0, 'steering_angle': -30.0},\n",
-      " {'index': 2, 'speed': 1.0, 'steering_angle': -20.0},\n",
-      " {'index': 3, 'speed': 2.0, 'steering_angle': -20.0},\n",
-      " {'index': 4, 'speed': 1.0, 'steering_angle': -10.000000000000004},\n",
-      " {'index': 5, 'speed': 2.0, 'steering_angle': -10.000000000000004},\n",
-      " {'index': 6, 'speed': 1.0, 'steering_angle': 0.0},\n",
-      " {'index': 7, 'speed': 2.0, 'steering_angle': 0.0},\n",
-      " {'index': 8, 'speed': 1.0, 'steering_angle': 9.999999999999998},\n",
-      " {'index': 9, 'speed': 2.0, 'steering_angle': 9.999999999999998},\n",
-      " {'index': 10, 'speed': 1.0, 'steering_angle': 20.0},\n",
-      " {'index': 11, 'speed': 2.0, 'steering_angle': 20.0},\n",
-      " {'index': 12, 'speed': 1.0, 'steering_angle': 30.0},\n",
-      " {'index': 13, 'speed': 2.0, 'steering_angle': 30.0}]\n"
+     "ename": "Exception",
+     "evalue": "No files found in logs/sample-console-logs or logs/sample-console-logs/model/model_metadata.json",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m log \u001b[38;5;241m=\u001b[39m DeepRacerLog(model_logs_root)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# load logs into a dataframe\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[43mlog\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      8\u001b[0m     pprint(log\u001b[38;5;241m.\u001b[39magent_and_network())\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/log.py:156\u001b[0m, in \u001b[0;36mDeepRacerLog.load\u001b[0;34m(self, force)\u001b[0m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mself\u001b[39m, force\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    151\u001b[0m     \u001b[38;5;124;03m\"\"\" Method that loads DeepRacer training trace logs into a dataframe.\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \n\u001b[1;32m    153\u001b[0m \u001b[38;5;124;03m    This method is deprecated, use load_training_trace.\u001b[39;00m\n\u001b[1;32m    154\u001b[0m \n\u001b[1;32m    155\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 156\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_training_trace\u001b[49m\u001b[43m(\u001b[49m\u001b[43mforce\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/log.py:171\u001b[0m, in \u001b[0;36mDeepRacerLog.load_training_trace\u001b[0;34m(self, force, ignore_metadata)\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_block_duplicate_load(force)\n\u001b[1;32m    170\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ignore_metadata:\n\u001b[0;32m--> 171\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parse_trace_metadata\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfh\u001b[38;5;241m.\u001b[39mtraining_simtrace_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    174\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m    175\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPath to training-simtrace not configured. Check FileHandler configuration.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/log.py:370\u001b[0m, in \u001b[0;36mDeepRacerLog._parse_trace_metadata\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    368\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_parse_trace_metadata\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 370\u001b[0m     _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlist_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcheck_exist\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    371\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mfilterexp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfh\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_metadata_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    373\u001b[0m     _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfh\u001b[38;5;241m.\u001b[39mlist_files(check_exist\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    374\u001b[0m                            filterexp\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfh\u001b[38;5;241m.\u001b[39mhyperparameters_path)\n\u001b[1;32m    376\u001b[0m     model_metadata: \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.9/site-packages/deepracer/logs/handler.py:86\u001b[0m, in \u001b[0;36mFSFileHandler.list_files\u001b[0;34m(self, filterexp, check_exist)\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     85\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m check_exist:\n\u001b[0;32m---> 86\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo files found in \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m or \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_folder, filterexp))\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     88\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m []\n",
+      "\u001b[0;31mException\u001b[0m: No files found in logs/sample-console-logs or logs/sample-console-logs/model/model_metadata.json"
      ]
     }
    ],
@@ -195,205 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>episode</th>\n",
-       "      <th>steps</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>heading</th>\n",
-       "      <th>steering_angle</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>action</th>\n",
-       "      <th>reward</th>\n",
-       "      <th>done</th>\n",
-       "      <th>all_wheels_on_track</th>\n",
-       "      <th>progress</th>\n",
-       "      <th>closest_waypoint</th>\n",
-       "      <th>track_len</th>\n",
-       "      <th>tstamp</th>\n",
-       "      <th>episode_status</th>\n",
-       "      <th>pause_duration</th>\n",
-       "      <th>iteration</th>\n",
-       "      <th>worker</th>\n",
-       "      <th>unique_episode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.199897</td>\n",
-       "      <td>0.683124</td>\n",
-       "      <td>0.187968</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.791479</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.709159</td>\n",
-       "      <td>20.202</td>\n",
-       "      <td>prepare</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.199733</td>\n",
-       "      <td>0.683103</td>\n",
-       "      <td>0.183266</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.790551</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.709159</td>\n",
-       "      <td>20.269</td>\n",
-       "      <td>in_progress</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.208109</td>\n",
-       "      <td>0.683654</td>\n",
-       "      <td>0.282783</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.837858</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.709159</td>\n",
-       "      <td>20.333</td>\n",
-       "      <td>in_progress</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.230348</td>\n",
-       "      <td>0.682821</td>\n",
-       "      <td>-0.028072</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.963427</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.709159</td>\n",
-       "      <td>20.395</td>\n",
-       "      <td>in_progress</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.271157</td>\n",
-       "      <td>0.683003</td>\n",
-       "      <td>-0.069144</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.193869</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.709159</td>\n",
-       "      <td>20.475</td>\n",
-       "      <td>in_progress</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   episode  steps         x         y   heading  steering_angle  speed  \\\n",
-       "0        0    1.0  3.199897  0.683124  0.187968            20.0    2.0   \n",
-       "1        0    2.0  3.199733  0.683103  0.183266           -20.0    1.0   \n",
-       "2        0    3.0  3.208109  0.683654  0.282783            10.0    1.0   \n",
-       "3        0    4.0  3.230348  0.682821 -0.028072           -20.0    1.0   \n",
-       "4        0    5.0  3.271157  0.683003 -0.069144            20.0    2.0   \n",
-       "\n",
-       "   action  reward   done  all_wheels_on_track  progress  closest_waypoint  \\\n",
-       "0      11     0.0  False                 True  0.791479                 1   \n",
-       "1       2     1.0  False                 True  0.790551                 1   \n",
-       "2       8     1.0  False                 True  0.837858                 1   \n",
-       "3       2     1.0  False                 True  0.963427                 1   \n",
-       "4      11     1.0  False                 True  1.193869                 1   \n",
-       "\n",
-       "   track_len  tstamp episode_status  pause_duration  iteration  worker  \\\n",
-       "0  17.709159  20.202        prepare             0.0          0       0   \n",
-       "1  17.709159  20.269    in_progress             0.0          0       0   \n",
-       "2  17.709159  20.333    in_progress             0.0          0       0   \n",
-       "3  17.709159  20.395    in_progress             0.0          0       0   \n",
-       "4  17.709159  20.475    in_progress             0.0          0       0   \n",
-       "\n",
-       "   unique_episode  \n",
-       "0               0  \n",
-       "1               0  \n",
-       "2               0  \n",
-       "3               0  \n",
-       "4               0  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -3152,7 +2942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
