--- a/Training_analysis.ipynb
+++ b/Training_analysis.ipynb
@@ -144,9 +144,16 @@
     }
    ],
    "source": [
-    "model_logs_root = '/home/aj/deepracer-for-cloud/data/minio/bucket/rl-deepracer-sagemaker'\n",
-    "log = DeepRacerLog(model_logs_root)\n",
+    "from deepracer.logs import (AnalysisUtils, DeepRacerLog, S3FileHandler)\n",
     "\n",
+    "fh = S3FileHandler(bucket=\"<my_bucket>\", prefix=\"<my_prefix>\",\n",
+    "                   profile=\"<awscli_profile>\", s3_endpoint_url=\"<minio_url>\")\n",
+    "drl = DeepRacerLog(filehandler=fh)\n",
+    "drl.load_training_trace()\n",
+    "df = drl.dataframe()\n",
+    "\n",
+    "simulation_agg = AnalysisUtils.simulation_agg(df)\n",
+    "y\n",
     "# load logs into a dataframe\n",
     "log.load()\n",
     "\n",
