Fix the first statement for loading dataframes

--- a/Training_analysis.ipynb
+++ b/Training_analysis.ipynb
@@ -146,14 +146,14 @@
    "source": [
     "from deepracer.logs import (AnalysisUtils, DeepRacerLog, S3FileHandler)\n",
     "\n",
-    "fh = S3FileHandler(bucket=\"<my_bucket>\", prefix=\"<my_prefix>\",\n",
-    "                   profile=\"<awscli_profile>\", s3_endpoint_url=\"<minio_url>\")\n",
-    "drl = DeepRacerLog(filehandler=fh)\n",
-    "drl.load_training_trace()\n",
-    "df = drl.dataframe()\n",
+    "# fh = S3FileHandler(bucket=\"<my_bucket>\", prefix=\"<my_prefix>\",\n",
+    "#                    profile=\"<awscli_profile>\", s3_endpoint_url=\"<minio_url>\")\n",
     "\n",
-    "simulation_agg = AnalysisUtils.simulation_agg(df)\n",
-    "y\n",
+    "fh = S3FileHandler(bucket=\"bucket\", prefix=\"rl-deepracer-sagemaker\",\n",
+    "                   profile=\"minio\", s3_endpoint_url=\"http://192.168.78.118:9000\")\n",
+    "log = DeepRacerLog(filehandler=fh)\n",
+    "\n",
+    "\n",
     "# load logs into a dataframe\n",
     "log.load()\n",
     "\n",
@@ -165,8 +165,9 @@
     "    pprint(log.action_space())\n",
     "except Exception:\n",
     "    print(\"Robomaker logs not available\")\n",
+    "df = log.dataframe()\n",
     "\n",
-    "df = log.dataframe()"
+    "simulation_agg = AnalysisUtils.simulation_agg(df)"
    ]
   },
   {
