Add September 2022 track

--- a/Training_analysis.ipynb
+++ b/Training_analysis.ipynb
@@ -158,10 +158,13 @@
     "log.load()\n",
     "\n",
     "try:\n",
+    "    print(\"AGENT AND NETWORK\")\n",
     "    pprint(log.agent_and_network())\n",
     "    print(\"-------------\")\n",
+    "    print(\"HYPERPARAMETERS\")\n",
     "    pprint(log.hyperparameters())\n",
     "    print(\"-------------\")\n",
+    "    print(\"ACTION SPACE\")\n",
     "    pprint(log.action_space())\n",
     "except Exception:\n",
     "    print(\"Robomaker logs not available\")\n",
